--- a/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-list.page/episode-list.page.component.html
+++ b/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-list.page/episode-list.page.component.html
@@ -1,9 +1,34 @@
+<div class="filters">
+  <input
+    type="text"
+    placeholder="Nombre del episodio"
+    [(ngModel)]="filters.name"
+  />
+  <input
+    type="text"
+    placeholder="Código (ej: S01E01)"
+    [(ngModel)]="filters.episode"
+  />
+  <button (click)="applyFilters()">Buscar</button>
+</div>
+
 <h1>Episodios</h1>
 <ul *ngIf="episodes.length > 0; else loading">
   <li *ngFor="let episode of episodes">
     <strong>{{ episode.episode }}</strong> - {{ episode.name }}
   </li>
 </ul>
+
+<div *ngIf="totalPages > 1" class="pagination">
+  <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">
+    Anterior
+  </button>
+  <span>Página {{ currentPage }} de {{ totalPages }} </span>
+  <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages">
+    Siguiente
+  </button>
+</div>
+
 <ng-template #loading>
   <p>Cargando episodios...</p>
 </ng-template>
