--- a/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.html
+++ b/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.html
@@ -1,24 +1,38 @@
-<div *ngIf="episode; else loading">
-  <h2>{{ episode.name }}</h2>
-  <p><strong>Fecha:</strong> {{ episode.air_date }}</p>
-  <p><strong>Código:</strong> {{ episode.episode }}</p>
-  <p><strong>Creado:</strong> {{ episode.created }}</p>
-
-  <h3>Personajes</h3>
-  <ul>
-    <li *ngFor="let character of episode.characters">
+<div class="container">
+  <div class="details">
+    <h2>{{ episode?.name }}</h2>
+    <p><strong>Air Date:</strong> {{ episode?.air_date }}</p>
+    <p><strong>Episode Code:</strong> {{ episode?.episode }}</p>
+    <p><strong>Characters:</strong></p>
+    <ul>
+      <li *ngFor="let character of episode?.characters">
+    <button
+      [ngClass]="{ 'clicked': clickedCharacters.includes(character) }"
+      (click)="showCharacterImage(character)"
+    >
       {{ character }}
-      <button (click)="showCharacterImage(character)">
-      Ver imagen del personaje
     </button>
-    </li>
-  </ul>
+  </li>
+    </ul>
+  </div>
+
+  <div class="character-image-box">
+    <div *ngIf="characterObject else selectCharacter">
+      <img
+        [src]="characterObject.image"
+        alt="Character image"
+      />
+      <h3>{{ characterObject.name }}</h3>
+      <hr>
+      <p>STATUS: {{ characterObject.status }}</p>
+      <p>SPECIES: {{ characterObject.species }}</p>
+      <p>GENDER: {{ characterObject.gender }}</p>
+      <p>ORIGIN: {{ characterObject.origin.name }}</p>
+    </div>
+  </div>
 </div>
 
-<div *ngIf="selectedCharacterImage" class="character-image-container">
-  <img [src]="selectedCharacterImage" alt="Character" width="300" height="300" />
-</div>
 
-<ng-template #loading>
-  <p>Cargando episodio...</p>
+<ng-template #selectCharacter>
+<span >Selecciona un personaje</span>
 </ng-template>
