--- a/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.scss
+++ b/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.scss
@@ -1,5 +1,79 @@
-.character-image-container {
-  margin-top: 1rem;
+.container {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
+  gap: 4rem;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.details {
+  flex: 1;
+  background-color: #f9f9f9;
+  padding: 1.5rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.details h2 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.5rem;
+}
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+li {
+  padding-bottom: 3px;
+}
+
+.details p {
+  margin: 0.5rem 0;
+  font-size: 1rem;
+}
+
+.character-image-box {
+  width: 300px;
+  min-height: 300px;
+  height: auto;
+  border-radius: 12px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  h3, p {
+    padding-left: 1rem;
+  }
+}
+
+.character-image-box img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 12px;
+  object-fit: contain;
+}
+
+button {
+  background-color: #71adee;
+  color: white;
+  border: none;
+  padding: 0.4rem 0.8rem;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+
+  &.clicked {
+    background-color: #0056b3;
+  }
 }
