--- a/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.scss
+++ b/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.scss
@@ -14,6 +14,13 @@
   padding: 1.5rem;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+  overflow-y: auto;
+  padding: 0 2rem;
+  gap: 1rem;
 }
 
 .details h2 {
@@ -48,7 +55,8 @@ li {
   align-items: center;
   justify-content: center;
 
-  h3, p {
+  h3,
+  p {
     padding-left: 1rem;
   }
 }
