--- a/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.html
+++ b/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-detail/episode-detail.page.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <button (click)="goBack()">Atrás</button>
   <div class="details">
     <h2>{{ episode?.name }}</h2>
     <p><strong>Air Date:</strong> {{ episode?.air_date }}</p>
