--- a/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-list.page/episode-list.page.component.scss
+++ b/frontend/rick-and-morty-app/src/app/features/episodes/pages/episode-list.page/episode-list.page.component.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 85vh;
+  align-items: center;
 
   .title {
     text-align: center;
@@ -11,7 +12,11 @@
   .search-filters {
     text-align: center;
     margin-bottom: 1rem;
-    background: linear-gradient(to bottom, #f0f4f8 0%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(
+      to bottom,
+      #f0f4f8 0%,
+      rgba(255, 255, 255, 0) 100%
+    );
     border-radius: 1rem;
 
     .filters {
@@ -56,17 +61,16 @@
   }
 
   .episode-list {
-    flex: 1;
     overflow-y: auto;
     display: grid;
-    padding: 0 2rem;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    align-content: start;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
   }
 
   .episode-card {
-    height: 200px; 
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
